# NeuraGrid

./: .gitignore  README.md
.github/workflows/: release.yml
coordinator/: Cargo.toml
coordinator-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
coordinator-dashboard/src/: App.svelte  app.css
coordinator/src/: db.rs  main.rs
docs/: CAPABILITY_ONBOARDING.md  CLI_USAGE.md  DIRECTORY_STRUCTURE.md  WORKER_GUIDE.md
neuragrid-cli/: Cargo.toml
neuragrid-cli/src/: main.rs
neuragrid-worker/: build_log_frontend.txt  index.html  package-lock.json  package.json  tsconfig.json
neuragrid-worker/src/: App.svelte  app.css
neuragrid-worker/src-tauri/: Cargo.toml  build_log.txt  build_log_2.txt  tauri.conf.json
neuragrid-worker/src-tauri/capabilities/: default.json
neuragrid-worker/src-tauri/icons/: icon.icns
neuragrid-worker/src-tauri/src/: config.rs  connection.rs  hardware.rs  main.rs  runner.rs
neuragrid-worker/src-tauri/src/capabilities/: mod.rs
neuragrid-worker/src-tauri/src/capabilities/lp/: mod.rs
neuragrid-worker/src-tauri/src/capabilities/ot/: mod.rs
neuragrid-worker/src-tauri/src/capabilities/pd/: mod.rs
neuragrid-worker/src-tauri/src/capabilities/pr/: mod.rs
neuragrid-worker/src-tauri/src/capabilities/vd/: mod.rs
neuragrid-worker/src-tauri/src/capabilities/vs/: mod.rs
neuragrid-worker/src-tauri/src/profiles/: edge_jetson.rs  mod.rs  server_gpu.rs  standard.rs
neuragrid-worker/src/lib/: Scheduler.svelte
