[package]
name = "neuragrid-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-tungstenite = "0.24"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs"] }
