[package]
name = "neuragrid-worker"
version = "0.1.0"
description = "NeuraGrid Worker Client"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
wgpu = "0.19"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sysinfo = "0.30"
keyring = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = { version = "0.3", features = ["executor"] }
async-trait = "0.1"
rand = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
